tests/errors/function_assignment_requires_ref.dang
let source: Boolean! { true }

let target: Boolean! { false }

target = source
